--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h2>Home Movie Archive</h2>
-
+<!-- rebuild trigger -->
 <label>People:</label>
 <select id="people"><option value="">--Any--</option></select><br>
 
